app/assets/stylesheets/modules/panel_list.css.scss
$panel-list-item-height: 75px;
$panel-list-thumbnail-size: $panel-list-item-height;

.panel-list {
  .button {
    @include light-button;
    font-size: 1.2em;
    padding: 7px 10px;
  }
}

.panel-list .ccols {
  margin-bottom: 1em;
}

.panel-list-list {
  margin-top: 0;
}

.panel-list-item, .panel-list-list > .sortable-placeholder {
  color: #fff;
  background-color: #292929;
  border-left: 10px solid #424242;
  margin: 5px 5px 6px 5px;
  min-height: $panel-list-thumbnail-size + 30px;
  padding: 10px 10px 10px 14px;
  font-size: .8em;
  position: relative;

  &:first-child {
    margin-top: 0;
  }

  &.master-overlay-forward:hover {
    border-left-color: #525252;
    background-color: #393939;
  }

  h3 {
    overflow: hidden;
  }
}

.panel-list-item > p {
  margin-left: $panel-list-thumbnail-size;
}

// Drag handles instead of borders
.panel-list-item[draggable=true] {
  border-left: 0;
}

.panel-list-drag-handle {
  float: left;
  border: 2px solid #424242;
  border-top: 0;
  border-bottom: 0;
  cursor: move;
  height: $panel-list-item-height + 12px;
  width: 8px;
  margin: -6px 12px -6px -8px;
}

.panel-list-list > .sortable-placeholder {
  border: 3px dashed #424242;
}

.empty-button {
  visibility: hidden;
}

.panel-list-focused {
  border-left-color: #525252;
  background-color: #393939;
  cursor: pointer;
}

.panel-list-thumbnail-container {
  display: block;
  float: left;
  position:relative;
  margin-right: .5em;
  width: $panel-list-thumbnail-size + 10px;
  height: $panel-list-thumbnail-size + 10px;
  background-color: #222;
  border: 5px solid #111;
  text-align: center;
  line-height: $panel-list-thumbnail-size;
}

.panel-list-thumbnail-onerror {
  display: block;
  float: left;
  position:relative;
  margin-right: .5em;
  width: $panel-list-thumbnail-size + 10px;
  height: $panel-list-thumbnail-size + 10px;
  background-color: #222;
  border: 5px solid #323232;
  text-align: center;
  overflow: hidden;
}

.panel-list-thumbnail {
  max-width: $panel-list-item-height;
  max-height: $panel-list-item-height;
}

.panel-list-thumbnail-placeholder {
  color: #999;
  text-align: center;
  box-sizing: border-box;
  padding: 10px 4px 4px 4px;
  @include linear-gradient(#1c1c1c, #181818);
  border: 5px solid #111;
  line-height: 1.2em;

  i {
    font-size: 1.8em;
    margin-bottom: 5px;
    opacity: .3;
  }
}

.panel-list-badges {
  position: absolute;
  top: -5px;
  left: -5px;
  .tooltip {
    width: $facet-overlay-width;
  }

  .tooltip.right .tooltip-arrow {
    border-right-color: #263c50;
  }

  .tooltip-inner {
    max-width: $facet-overlay-width;
    background-color: #263c50;
  }

}

.badge {
  display: block;
  float: left;
  border-radius: 2px;
  margin: 2px 0 0 2px;
  background-repeat: no-repeat;
  width: 22px;
  height: 22px;
}

.facets-list-hide .badge {
  display: none;
}

.facets .badge {
  margin: 0 .5em 0 0;
}

.badge-gibs {
  @include retina-image(gibs, 22px 22px, png, null, '@2x', true);
}

.badge-subsetting {
  @include retina-image(opendap, 22px 22px, png, null, '@2x', true);
}

.badge-nrt {
  border-radius: 2px;
  background-color: #2ECC71;
  color: #fff;
  text-shadow: .5px .5px .5px darken(#2ECC71, 20%);
  font-size: 9px;
  font-weight: bold;
  text-align: center;
  line-height: 22px;
  &:before {
    content: "NRT";
  }
  // @include retina-image(nrt, 22px 22px, png, null, '@2x', true);
}

.badge-cwic {
  border-radius: 2px;
  background-color: #ccaa00;
  color: #fff;
  text-shadow: .5px .5px .5px darken(#ccaa00, 20%);
  font-size: 1em;
  font-weight: bold;
  text-align: center;
  line-height: 22px;
  font-family: FontAwesome;
  &:before {
    content: "\f0ac";
  }
  // @include retina-image(nrt, 22px 22px, png, null, '@2x', true);
}

.panel-header-toggle {
  color: #888;
  line-height: 1.5em;
}

.panel-list-muted {
  font-size: .9em;
  padding: 0;
  color: #7f8c8d;
}

.panel-list-details {
  font-size: .8em;
  background: #111;
  border-radius: 5px;
  padding: 4px 8px;
  display: inline;
  color: #fff;
  text-shadow: 1px 1px 1px #222;
}

.panel-list-comparison-details {
  font-size: .9em;
  padding: 4px 8px;
}

.panel-list-granule-description {
  border-left: 1px solid #888;
  padding-left: 4px;
  margin-left: 4px;
}

.panel-list-item-actions {
  position: absolute;
  padding: 1em;
  right: 0;
  bottom: 0;
}

#granule-list:focus, #granule-list.has-focus {
  .panel-list-selected {
    border-left-color: #2980b9;
  }
}

.panel-list-selected {
  border-left-color: desaturate(#2980b9, 50%);
  background: #494949;

  .panel-list-when-selected {
    visibility: visible;
  }
}

.panel-list-when-selected {
  visibility: hidden;
}

.panel-list a.panel-list-remove {
  float: right;
  color: #fff;
  color: rgba(255,255,255, 0.2);
  @include transition(color 0.3s ease-in-out);

  &:hover {
    color: #e74c3c;
  }
}

.panel-list-title {
  font-size: 1.1em;
  padding: 0 .5em .2em;
  color: #c9c9c9
}

.portal-escape {
  color: #c9c9c9;
  margin-top: 2em;
  padding: 1em .5em .5em;
  border-top: 1px solid #888;
}

.portal-escape a {
  color: #c9c9c9;
  text-decoration: underline;
  &:link, &:visited {
    color: #c9c9c9;
  }
}

